[tool.poetry]
name = "gitdumper"
version = "0.1.0"
description = "Git Dumper Tool"
authors = ["tz4678 <tz4678@gmail.com>"]
license = "MIT"
repository = "https://github.com/tz4678/gitdumper"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gitdumper = "gitdumper.cli:main"
