[tool.poetry]
name = "XAccessDumper"
version = "0.1.2"
description = "Dumps everything web accessible: `.git`, `.DS_Store`, sql dumps, backups..."
authors = ["s3rgeym <yamldeveloper@proton.me>"]
license = "MIT"
repository = "https://github.com/s3rgeym/x-access-dumper"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
ds-store = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
x-access-dumper = "xaccessdumper.cli:main"
